--- a/nginx/conf.d/wise.conf
+++ b/nginx/conf.d/wise.conf
@@ -18,7 +18,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-    location ~ /(admin|portal|author|api|previewproject.html) {
+    location ~ /(admin|portal|api) {
         proxy_pass http://wise-api-server:8080;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-Host $server_name;
