--- a/wise-client-server/nginx/conf.d/wise-client-server.conf
+++ b/wise-client-server/nginx/conf.d/wise-client-server.conf
@@ -19,7 +19,7 @@ server {
 
   if ($accept_language ~ "(es|ja|pt|tr|zh-Hant|zh-Hans)") {
     # Redirect "/" to Angular app in browser's preferred language
-    rewrite ^/$ /$accept_language permanent;
+    rewrite ^/$ /$accept_language last;
   }
 
   # Everything under the Angular app is always redirected to Angular in the correct language
